chapter5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-rs
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: nginx
        image: ghcr.io/gihyodocker/simple-nginx-proxy:v0.1.0
        ports:
        - containerPort: 80

      - name: echo
        image: ghcr.io/gihyodocker/echo:v0.1.0
        ports:
        - containerPort: 8080
