chapter5/pod_debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  labels:
    app: debug-pod
spec:
  containers:
  - name: debug-pod
    image: ghcr.io/gihyodocker/debug:v0.1.0
    command: ["/bin/sh"]
    args: ["-c", "while true; do sleep 3600; done"]
    ports:
    - containerPort: 8080
