chapter5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: ClusterIP
  selector:
    app: echo
    # release: summer
  ports:
    - name: http
      # protocol: TCP
      port: 80
      # targetPort: 80
