chapter5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    # 必要に応じて Ingress Controller に合わせたアノテーションを指定
    # 例: nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ch05.gihyo.local     # 任意のホスト名。実際の利用環境に合わせて変更
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
